# carla-driving

CIL_modular-master/: drive_multi_config.py
CIL_modular-master/configuration/: mm01_rc28_wpz_M_rgb_cluster.py  mm45_v4_base_newseg_noiser_3cams.py  mm45_v4_from_alldata_perception.py  mm45_v4_from_alldata_perception_v4.py  mm45_v4_from_alldata_perception_v9.py
CIL_modular-master/drive_interfaces/configuration/: 9cam_agent_carla_acquire_rc_batch.py
code2/: data_collection.py  drive.py  readme  screen_manager.py
code2/.sync/: ID
code2/configuration/: 3cam_carlaacquire_drive_config.py  virtual_elektra_acquire.py  virtual_elektra_test.py
code2/drive_interfaces/: carla_recorder.py
code2/drive_interfaces/comercial_cars/: carla_human.py  data_benchmark.py  generalization_benchmark.py  run_test_cvpr.py  test_benchmark.py
code2/drive_interfaces/virtual_elektra/: virtual_elektra_human.py
code2/path/2018610_Felipe_1/: data_00000.h5
code_client_side/: drive.py  driver_machine.py  machine_output_functions.py  noiser.py  readme
code_client_side/configuration/: ****3cam_acquire.py  3cam_carlaacquire_drive_config.py  3cam_deeprc_drive_config.py  9cam_agent_carla_acquire.py  9cam_agent_carla_test.py
code_client_side/drive_interfaces/: CarlaSettings3CamAcquire.ini  iCarla9CamerasW14.ini
code_client_side/drive_interfaces/comercial_cars/: carla_human.py  carla_machine.py  lightbenchmark.py  test_carla_machine.py
code_client_side/path/2018611_Felipe_1/: data_00000.h5
code_client_side/path/2018611_Felipe_2/: data_00000.h5
code_client_side/path/2018611_Felipe_3/: data_00000.h5
inuse/: chauffeur.py  drive.py
inuse/drive_interfaces/carla/: carla_recorder.py  makeConfigs.sh  rcCarla_9Cams_W2_pc.ini
inuse/drive_interfaces/carla/auto_gen_configs/: default_ImageSizeX=700_WeatherId=01.ini  default_ImageSizeX=700_WeatherId=02.ini  default_ImageSizeX=700_WeatherId=03.ini  default_ImageSizeX=700_WeatherId=04.ini  default_ImageSizeX=700_WeatherId=05.ini  default_ImageSizeX=700_WeatherId=06.ini  default_ImageSizeX=700_WeatherId=07.ini  default_ImageSizeX=700_WeatherId=08.ini  default_ImageSizeX=700_WeatherId=09.ini  default_ImageSizeX=700_WeatherId=10.ini  default_ImageSizeX=700_WeatherId=11.ini  default_ImageSizeX=700_WeatherId=12.ini  default_ImageSizeX=700_WeatherId=13.ini  default_ImageSizeX=700_WeatherId=14.ini  default_ImageSizeX=800_WeatherId=01.ini  default_ImageSizeX=800_WeatherId=02.ini  default_ImageSizeX=800_WeatherId=03.ini  default_ImageSizeX=800_WeatherId=04.ini  default_ImageSizeX=800_WeatherId=05.ini  default_ImageSizeX=800_WeatherId=06.ini  default_ImageSizeX=800_WeatherId=07.ini  default_ImageSizeX=800_WeatherId=08.ini  default_ImageSizeX=800_WeatherId=09.ini  default_ImageSizeX=800_WeatherId=10.ini  default_ImageSizeX=800_WeatherId=11.ini  default_ImageSizeX=800_WeatherId=12.ini  default_ImageSizeX=800_WeatherId=13.ini  (+72 more)
inuse/drive_interfaces/configuration/: 3cam_carla_drive_config.py  3cam_carlaacquire_drive_config.py  9cam_agent_carla_acquire_rc_2.py
inuse/drive_interfaces/elektra_interface/: elektra_human.py
models/research/cognitive_mapping_and_planning/: requirements_carla.txt
models2/research/cognitive_mapping_and_planning/datasets/inuse/drive_interfaces/elektra_interface/Stixels/: CMakeLists.txt  configuration.h  main.cu
models_origin/: README.md
report/: Plan.md  Untitled.md  report.md
(+119 files in other folders)
